auth added in backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,11 @@
-PORT = 8894
+PORT = 9984
+
 MONGO_DB_URI = mongodb+srv://kaungsan24901_db_user:ye0OYhKSepGBvbI8@cluster0.9zglepa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_PASSWORD = ye0OYhKSepGBvbI8
 
 JWT_SECRET = whatiswhat
 NODE_ENV = development
 
-DB_PASSWORD = ye0OYhKSepGBvbI8
+CLOUDINARY_CLOUD_NAME = dizciejox
+CLOUDINARY_API_KEY = 485783495454159
+CLOUDINARY_API_SECRET = IdtWw7G9JTGgkEWS2was8jupAfw
