--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12",
